<resources>
    <string name="app_name">Ks</string>
    <string name="plan_name">戒心</string>
    <string name="add_plan">添加计划</string>
    <string name="up_btn_text">up</string>
    <string name="check_btn_text">签到</string>
    <string name="gp_btn_text">放弃</string>
    <string name="continue_days">5</string>
    <string name="insist_days">5</string>
    <string name="please_select_plan">请选择计划: </string>
    <string name="accept">确定</string>
    <string name="cancle">取消</string>
    <string name="check_dialog_1">我</string>
    <string name="check_dialog_2">今</string>
    <string name="check_dialog_3">天</string>
    <string name="check_dialog_4">坚</string>
    <string name="check_dialog_5">持</string>
    <string name="check_dialog_6">计</string>
    <string name="check_dialog_7">划</string>
    <string name="check_dialog_8">了</string>
    <string name="confirm_giveup">确认放弃吗</string>
    <string name="confirm_gp_btn_text">确认?</string>
    <string name="cancle_gp_btn_text">取消</string>
    <string name="keep_success">keep</string>
    <string name="down">更多</string>
    <string name="broken">boom</string>
    <string name="delete">删除</string>
    <string name="recently_bad_habits">Recently Bad Habits</string>
    <string name="up_words">up words:</string>
    <string name="add">add</string>
    <string name="vps_list_title">vps列表</string>
    <string name="vps_name">主机名称:</string>
    <string name="vps_status">状态:</string>
    <string name="total_bandwidth">总流量:</string>
    <string name="cur_bandwidth">已用:</string>
    <string name="ip">ip:</string>
    <string name="cost">价格:</string>
    <string name="welcome_word">每天向更美好的自己前进</string>
</resources>
