<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_1"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_2"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_3"
            android:textAlignment="center"
            android:background="#66ff99"
            >

        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_4"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_height="75dp">
        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_5"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_6"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_7"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/check_btn_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/check_dialog_8"
            android:textAlignment="center"
            android:background="#66ff99">
        </com.gc.materialdesign.views.ButtonRectangle>
    </LinearLayout>




</RelativeLayout>