<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_giveup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:text="@string/confirm_gp_btn_text"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/cancle_gp_btn_text"
            />

    </LinearLayout>
</RelativeLayout>