<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.ks.activity.DailyCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/daily_check_head"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <!-- 添加新计划 -->
            <LinearLayout
                android:id="@+id/plan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/plan_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/keep_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:textSize="14sp" />
            </LinearLayout>


            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/add_plan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="#2366d1"
                android:text="@string/add_plan" />


            <!-- 三个button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/up_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:background="#2366d1"
                    android:text="@string/up_btn_text" />

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/check_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="4dp"
                    android:background="#2366d1"
                    android:text="@string/check_btn_text" />

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/gp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="4dp"
                    android:background="#2366d1"
                    android:text="@string/gp_btn_text" />

            </LinearLayout>

        </RelativeLayout>

        <!-- 这里是统计 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/daily_check_tools_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- 日历 -->
                <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/calendar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="30dp"
                    android:scaleType="center"
                    app:materialIcon="calendar"
                    app:materialIconColor="#356070" />


                <!-- 统计 -->
                <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/statistics"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:materialIcon="star"
                    app:materialIconColor="#356070" />


                <!-- 设置 -->
                <net.steamcrafted.materialiconlib.MaterialIconView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/settings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    app:materialIcon="settings"
                    app:materialIconColor="#356070" />

            </LinearLayout>

            <!-- 欢迎话 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/welcome_word"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>